# mock_kernel_driver

./: .gitignore  CMakeLists.txt  README.md
client/: Makefile  client.c  python_client.py
kernel_chardev/: Makefile  chardev_enduro.c  load_driver  loadmodule.sh  reload  rm_mod.sh
server/: Makefile  server.c
